--- a/index.html
+++ b/index.html
@@ -14,5 +14,35 @@
     <link rel="stylesheet" href="./css/styles.css" />
     <script src="./app.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h2 class="heading">banana talk</h2>
+    </header>
+
+    <main>
+      <div class="main-center">
+        <textarea
+          name="text"
+          placeholder="put your message here which you want to convert to banana language"
+        ></textarea>
+
+        <button class="btn translate-btn">translate to banana</button>
+
+        <p>Translation will come here 👇</p>
+
+        <div class="output-text">Translated text will be here...</div>
+      </div>
+    </main>
+
+    <footer class="about">
+      <div class="section-center about-center">
+        <h2>about</h2>
+        <p>
+          Are you a fan of minions? Did you know that the gibberish they say is
+          an actual language. Use the translator to convert your text from
+          English to Minion speak or Banana language.
+        </p>
+      </div>
+    </footer>
+  </body>
 </html>
