--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   </head>
   <body>
     <header>
-      <h2 class="heading">banana talk</h2>
-      <div class="alert alert-danger">Please enter text</div>
+      <h2 class="heading">banana talk 🍌</h2>
+      <div class="alert"></div>
     </header>
 
     <main>
