style: added favicon

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
     />
+    <!-- end of font awesome -->
+
+    <!-- favicon -->
+    <link rel="shortcut icon" href="./favicon.svg" type="image/x-icon" />
+    <!-- end of favicon -->
     <link rel="stylesheet" href="./css/normalize.css" />
     <link rel="stylesheet" href="./css/styles.css" />
     <script src="./app.js" defer></script>
